# idjlm-pro

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEX_REVIEW_2026-04-05.txt  DEPLOYMENT_CHECKLIST.md  DESKTOP_APP_ANALYSIS.md  FEATURES_ADDED.md  FIXES_APPLIED.md  GOALS.md  IMPLEMENTATION_NOTES.md  INVESTIGATION_REPORT.md  LICENSE  QWEN.md  README.md  build-mac.sh  config.example.env  create-mac-app.sh  idjlm.spec  package-lock.json  package.json  pyproject.toml  requirements.txt  run_app.py  setlist.json  start.sh  taxonomy.json  vite.config.js
.github/workflows/: build.yml  ci.yml  release-auto.yml  release.yml  tauri-build.yml
DJ Library Manager.app/Contents/: Info.plist
app/: __init__.py
app/data/: taxonomy_templates.json
assets/: make_icon.py
docs/: fable-vision-2026-06-12.md  serato-crate-format.md
frontend/: main.js
scripts/: test_write_back_roundtrip.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
templates/: index.html
tests/: BUGS-FOUND.md  conftest.py  test_a1_p1_regressions.py  test_a3_p2_regressions.py  test_a4_thread_safety.py  test_advisor.py  test_analysis_cache.py  test_analysis_correctness.py  test_b2_json_migration.py  test_bugfixes.py  test_c1_key_detection_benchmark.py  test_classifier.py  test_config.py  test_d1_fingerprint.py  test_g_cancellation.py  test_g_watch_incremental.py  test_hygiene_f3.py  test_integration.py  test_phase_e.py  test_pick_folder_f1.py  test_release_workflows.py  test_routes.py  test_scanner.py  test_settings.py  test_stem_routes_security.py  test_tag_routes.py
(+149 files in other folders)
