[package]
name = "idjlm-pro"
version = "3.5.0"
description = "IDJLM Pro — Intelligent DJ Library Manager"
authors = ["xonline"]
license = "MIT"
repository = ""
default-run = "idjlm-pro"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "idjlm-pro"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
